# semrouter

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  eval.jsonl  hard_negatives.jsonl  justfile  router.toml  routes.jsonl
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/ADRs/: 0001-zero-dependencies-goal.md  0002-pure-classifier-architecture.md  0003-byo-embedder-trait.md  index.md
docs/superpowers/plans/: 2026-05-06-eval-suite-and-fixtures.md  2026-05-07-public-release-v0.1.1.md
examples/: eval_suite.rs  quickstart.rs  with_logging.rs
experiments/: experiment_20260506_181214.json  experiment_20260506_181513.json  experiment_20260506_181651.json  experiment_20260506_182032.json
pocs/POC-001/: POC-001.md  test_route.sh
src/: config.rs  decision.rs  embedding.rs  error.rs  eval.rs  experiment.rs  lib.rs  main.rs  route.rs  scoring.rs  storage.rs  testing.rs  time_util.rs
tests/: contract.rs  error_test.rs  eval_latency_test.rs  integration.rs  no_http_test.rs  routing_test.rs  testing_module_test.rs
tests/common/: mod.rs  test_embedder.rs
tests/fixtures/minimal/: eval.jsonl  router.toml  routes.jsonl  thresholds.toml
tests/fixtures/voice-assistant/: eval.jsonl  router.toml  routes.jsonl  thresholds.toml
