[package]
name = "semrouter"
version = "0.1.0"
edition = "2021"
description = "Semantic vector router for agent/model/workflow dispatch"
license = "MIT"
repository = "https://github.com/AgentParadise/semrouter"
readme = "README.md"
categories = ["text-processing"]
keywords = ["semantic", "router", "embeddings", "fastembed", "routing"]

[[bin]]
name = "semrouter"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
fastembed = { version = "4", default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries"] }

[dev-dependencies]
tempfile = "3"
