[package]
name = "semrouter"
version = "0.1.0"
edition = "2021"
description = "Semantic vector router for agent/model/workflow dispatch"
license = "MIT"
repository = "https://github.com/AgentParadise/semrouter"
readme = "README.md"
categories = ["text-processing"]
keywords = ["semantic", "router", "embeddings", "fastembed", "routing"]

[[bin]]
name = "semrouter"
path = "src/main.rs"
required-features = ["cli", "fastembed"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Optional — enabled by default. Disable with default-features = false.
fastembed = { version = "4", default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries"], optional = true }
clap = { version = "4", features = ["derive"], optional = true }

[features]
default = ["fastembed", "cli"]
fastembed = ["dep:fastembed"]
cli = ["dep:clap"]

[dev-dependencies]
tempfile = "3"
