[package]
name = "semrouter"
version = "0.1.1"
edition = "2021"
authors = ["AgentParadise"]
description = "File-based semantic vector router for agent/model/workflow dispatch. Zero default deps."
license = "MIT"
repository = "https://github.com/AgentParadise/semrouter"
homepage = "https://github.com/AgentParadise/semrouter"
documentation = "https://docs.rs/semrouter"
readme = "README.md"
categories = ["text-processing", "algorithms"]
keywords = ["semantic", "router", "embeddings", "fastembed", "routing"]
exclude = [
    ".github/",
    ".vscode/",
    ".claude/",
    ".fastembed_cache/",
    "experiments/",
    "pocs/",
    "docs/",
    "target/",
    "Cargo.lock",
    "*.jsonl",
    "router.toml",
    "tests/fixtures/voice-assistant/",
    "tests/fixtures/minimal/",
    "assets/",
]

[[bin]]
name = "semrouter"
path = "src/main.rs"
required-features = ["cli", "fastembed"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "0.8"

# Optional — enabled by default. Disable with default-features = false.
fastembed = { version = "4", default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries"], optional = true }
clap = { version = "4", features = ["derive"], optional = true }

[features]
default = ["fastembed", "cli"]
fastembed = ["dep:fastembed"]
cli = ["dep:clap"]

[dev-dependencies]
tempfile = "3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
